--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@zenstackhq/server": "^2.14.0",
     "bcrypt": "^5.1.1",
     "hono": "^4.7.7",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "nanoid": "^5.1.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
